creata sendmessage(non funziona)
